# poker

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/: asgi.py  settings.py  urls.py
jstoolchains/: package-lock.json  package.json  tailwind.config.js
poker/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
poker/migrations/: 0001_initial.py
poker/templates/poker/: coffee.html  estimation.html  estimations.html  home.html  join.html  partial_estimations.html  participants_list.html  start_and_stop_estimation.html  started_session.html  username_template.html
templates/: base.html
