[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jalal Izekki <jalal.izekki99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
celery = "^5.3.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
django-user-accounts = "^3.3.2"
django-browser-reload = "^1.12.1"
channels = "^4.1.0"
daphne = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
